Levitation import of page 2375 rev 7682.

--- a/0-/GSoC:2007/Service Clients/Schedule.mediawiki
+++ b/0-/GSoC:2007/Service Clients/Schedule.mediawiki
@@ -24,7 +24,7 @@ The schedule is on weekly basis and this is just a rough plan.  It will be updat
 ----
 
 
-'''''Jul 10 - Jul 16''''': Solve service configuration issue and anything that's left over from previous weeks.
+'''''Jul 10 - Jul 16''''': Write the special service client to manage all other service clients.
 
 '''''Jul 17''''': Document things I've done so far.
 
