Levitation import of page 2324 rev 7683.

--- a/0-/GSoC:2007/Generated IPC.mediawiki
+++ b/0-/GSoC:2007/Generated IPC.mediawiki
@@ -13,6 +13,7 @@ I will then need to test the C binding extensively for problems as the rest of t
 ...
 [http://thisnukes4u.net/blog/archives/cat_2/index.html Project blog]
 ... 
+[[Summer of Code 2007/Generated IPC/Notes | Notes]]
 ''add links to other subpages here''
 
 }}
