update for wafisms
Levitation import of page 788 rev 7686.

--- a/0-/FAQ.mediawiki
+++ b/0-/FAQ.mediawiki
@@ -122,7 +122,7 @@ The seperator between different sockets here is ';'.
 : Add ''/usr/local/lib'' to either your ''LD_LIBRARY_PATH'' environment variable, or as a new line in ''/etc/ld.so.conf''. If you add the line to ld.so.conf, make sure you run ''ldconfig'' before trying to use xmms2 again. If you have installed XMMS2 using a non-default PREFIX, the path you'll have to add will be ''$PREFIX/lib''.
 
 === When trying to use a Ruby or Python XMMS2 client, I get ''can't find xmmsclient'' ===
-: This means you're missing the Ruby or Python client library bindings. To build the Python module, you'll need to install [http://www.cosc.canterbury.ac.nz/~greg/python/Pyrex/ Pyrex] and Python dev headers. To build the Ruby module, you'll need to install the Ruby dev headers. Once you have those, run ''scons CONFIG=1'' to re-build XMMS2.
+: This means you're missing the Ruby or Python client library bindings. To build the Python module, you'll need to install [http://www.cosc.canterbury.ac.nz/~greg/python/Pyrex/ Pyrex] and Python dev headers. To build the Ruby module, you'll need to install the Ruby dev headers. Once you have those, run ''./waf configure --nocache && ./waf build'' to reconfigure and rebuild XMMS2.
 
 === I can't play MP3s, what kind of media player is this? ===
 : XMMS2 only installs plugins for the libraries installed on your system. You're probably missing libmad. See the [[Install instructions]] for more information.
