/* Distant Future / New Features */
Levitation import of page 2364 rev 7691.

--- a/0-/Client:Esperanza/Roadmap.mediawiki
+++ b/0-/Client:Esperanza/Roadmap.mediawiki
@@ -53,3 +53,4 @@ This page tries to collect the future of Esperanza. Please put new ideas in the 
 * Make sure that the Connection code can handle disconnect, reconnect, connect to multiple and similar operations. Ideally we should be able to switch server without quiting esperanza and not have to relaunch it when it disconnects.
 * make the playlist columns editable, add / remove items which can be shown in the context area of a playlistitem
 * make an album playlist view like the current playlist, but instead of "artist - title" rows it shows "artist - album" (or "artist - album (songcount - totaltime)"). Multiple songs in a row result in one album line. Single songs could be showed as normal songs. The context area should show the songs in the selected album (songs that are missing could have another color like a disabled row) and some cover art.
+* one step further Playlist Stuff: make a pluginAPI for a playlist widget, so we can support simple Playlists as Title per row, normal like the current Playlist and advanced Playlists like the Albumplaylist. And make theses playlists chooseable via preference dialog.
