Added the Disconnected signal
Levitation import of page 2264 rev 7707.

--- a/0-/Media Player Interfaces.mediawiki
+++ b/0-/Media Player Interfaces.mediawiki
@@ -396,6 +396,12 @@ Signal is emitted when the "Media Player" changes capabilities, Flags are CAN_GO
      <arg type="i" />
    </signal>
 
+==== Disconnected ==== 
+Signal is emitted when the "Media Player" cleanly leaves the bus.
+
+   <signal name="Disconnected">
+   </signal>
+
 = See Also =
 * [http://bmpx.beep-media-player.org/site/MPRIS_Interfacing_Specification MPRIS]
 * [http://wiki.videolan.org/index.php/DBus-spec VLC DBUS Spec] based on MPRIS
