--- a/0-/Component:cdda.mediawiki
+++ b/0-/Component:cdda.mediawiki
@@ -1,7 +1,35 @@
 {{ComponentHeader}}
 
 =Summary=
-{{Update}}
+Adds support for playing CD Audio.
+=Usage=
+Browsing the cdda:// will show all valid urls for tracks on the currently inserted CD.
+ $ xmms2 browse cdda://
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/1 
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/2 
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/3 
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/4 
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/5 
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/6 
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/7 
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/8 
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/9 
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/10 
+ cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/11 
+
+You can add the whole CD to the playlist with the addpls command.
+ $ xmms2 addpls cdda://
+ Playlist with 11 entries added
+
+Or you can add a single song by specifying its full path from the browse.
+ xmms2 add cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/8
+ Added cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/8
+
+With current -devel radd also works if you specify the CDID also
+ $ xmms2 radd cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-
+Unfortunately it won't sort the entries properly at the moment.
+
+You can specify the device which the plugin should use by modifying the cdda.device config value.
 
 =Links=
 * add links here
