/* [http://git.xmms.se/?p=esperanza.git;a=shortlog;h=0.4 Version 0.4] */
Levitation import of page 2364 rev 7718.

--- a/0-/Client:Esperanza/Roadmap.mediawiki
+++ b/0-/Client:Esperanza/Roadmap.mediawiki
@@ -31,6 +31,7 @@ This page tries to collect the future of Esperanza. Please put new ideas in the 
 ** &#10003; no entry in windowlist for minimode too
 * &#10003; add a setting, where you can choose between single- or double-click on the trayicon to show respectively hide the playerwindow.
 * &#10003; add GlobalShortcut functionality for e.g. play <=> pause, next song, previous song, show <=> hide window
+* &#10003; preferences dialog for direct access to xmms2d settings
 
 == Version 0.5 ==
 
