--- a/0-/Client:Esperanza/Roadmap.mediawiki
+++ b/0-/Client:Esperanza/Roadmap.mediawiki
@@ -64,3 +64,4 @@ This page tries to collect the future of Esperanza. Please put new ideas in the 
 ** most of the album info should be based on [http://musicbrainz.org/doc/XMLWebService MusicBrainz] data, but there must be some fuzzy logic for songs without MusicBrainz ids
 
 * one step further Playlist Stuff: make a pluginAPI for a playlist widget, so we can support simple Playlists as Title per row, normal like the current Playlist and advanced Playlists like the Albumplaylist. And make theses playlists chooseable via preference dialog.
+* make the language selectable, or even let the user overrule the systems language setting
