--- a/1-Talk/Mediatags.mediawiki
+++ b/1-Talk/Mediatags.mediawiki
@@ -28,3 +28,7 @@ Further more, some songs can have more then one mood, so arrays have to be hande
 
 
 -wabu 19:05, 1 August 2007 (CEST)
+
+The only reason to standardize is if these tags are intended to be machine-readable. BPM might make sense for some music-fingerprinting or something. (Maybe OFA will do this?) And mood would only need to be standardized if clients have some internal static collection that expects a mood key. As far as mood goes, isn't a delimiter enough without the added complexity of full-blown arrays? I can't think of any mood words that have a comma or semicolon in them, and that is easy to parse, even in C.
+
+-[[User:Puzzles|Puzz]] 21:05, 1 August 2007 (CEST)
